# csv-postgres-schema-helper

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
example/: list.txt
example/month1/: accounts.csv
example/month2/: accounts.csv
example/month3/: accounts.csv
src/: codegen.rs  error.rs  infer.rs  load.rs  main.rs  manifest.rs  report.rs  schema.rs  util.rs
testdata/: list.txt
testdata/2024-01/: accounts.csv
testdata/2024-02/: accounts.csv
testdata/2024-03/: accounts.csv
testdata/2024-04/: accounts.csv
